--- a/resources/frontend/angular/src/app/app.component.html
+++ b/resources/frontend/angular/src/app/app.component.html
@@ -1,6 +1,12 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<app-header></app-header>
-<div>
-  <router-outlet></router-outlet>
-</div>
-<app-footer></app-footer>
+
+<mat-sidenav-container>
+  <mat-sidenav mode="over" [opened]="mainService.openSideNav$ | async">Sidenav content</mat-sidenav>
+  <mat-sidenav-content class="app-with-menus">
+    <app-header></app-header>
+    <div>
+      <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
