--- a/resources/frontend/angular/src/styles/main.scss
+++ b/resources/frontend/angular/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "settings";
 
 // General
+@import "general/colors";
 @import "general/animations";
 @import "general/backgrounds";
 @import "general/buttons";
