--- a/resources/frontend/angular/src/app/app.component.scss
+++ b/resources/frontend/angular/src/app/app.component.scss
@@ -1,3 +1,9 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
 
 .app-with-menus {
   display: flex;
