--- a/resources/frontend/angular/src/app/core/components/home/home.component.html
+++ b/resources/frontend/angular/src/app/core/components/home/home.component.html
@@ -1,19 +1,57 @@
-<main>
-  <h2>User list:</h2>
-  <mat-card *ngFor="let user of (users | async)" class="my-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>{{ user.name }}</mat-card-title>
-      <mat-card-subtitle>{{ user.id }}</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        Lorem ...
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button matRipple mat-button>LIKE</button>
-      <button matRipple mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
-</main>
+
+<mat-form-field color="primary" appearance="fill">
+  <mat-label>Prestation</mat-label>
+  <mat-select [formControl]="prestations" multiple>
+    <mat-select-trigger>
+      {{prestations.value ? prestations.value[0] : ''}}
+      <span *ngIf="prestations.value?.length > 1" class="example-additional-selection">
+        (+{{prestations.value.length - 1}} {{prestations.value?.length === 2 ? 'other' : 'others'}})
+      </span>
+    </mat-select-trigger>
+    <mat-option *ngFor="let topping of prestationList" [value]="topping">{{topping}}</mat-option>
+  </mat-select>
+</mat-form-field>
+
+<!--  <mat-form-field class="example-full-width" appearance="fill">-->
+<!--    <mat-label>Heure et date</mat-label>-->
+<!--    <input matInput [matDatepickerFilter]="datePickerFilter" [matDatepicker]="picker">-->
+<!--    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>-->
+<!--    <mat-datepicker #picker></mat-datepicker>-->
+<!--  </mat-form-field>-->
+
+<!-- date -->
+<mat-form-field color="primary" appearance="fill">
+  <mat-label>Date</mat-label>
+  <input matInput [matDatepicker]="picker" [formControl]="appointmentDate" [matDatepickerFilter]="datePickerFilter">
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>
+  <!--    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>-->
+  <!--    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>-->
+</mat-form-field>
+
+<!-- autour de chez moi (ville) / autres villes select -->
+<mat-form-field>
+    <span matPrefix>
+      <mat-icon>location_on</mat-icon>
+    </span>
+  <mat-label>Où chercher ?</mat-label>
+  <input type="text"
+         matInput
+         [formControl]="stateGroup"
+         required
+         [matAutocomplete]="autoGroup">
+  <mat-autocomplete #autoGroup="matAutocomplete" [displayWith]="showCity">
+    <mat-optgroup label="Trouver votre emplacement">
+      <mat-option [value]="null">
+        <mat-icon>location_on</mat-icon> Trouver votre emplacement
+      </mat-option>
+    </mat-optgroup>
+    <mat-optgroup label="Trouver par ville">
+      <mat-option *ngFor="let city of cities" [value]="city">
+        {{ showCity(city) }}
+      </mat-option>
+    </mat-optgroup>
+  </mat-autocomplete>
+</mat-form-field>
+
+<button mat-flat-button color="primary">Rechercher</button>
