--- a/resources/frontend/angular/src/styles/general/_typography.scss
+++ b/resources/frontend/angular/src/styles/general/_typography.scss
@@ -2,6 +2,8 @@
  * Global Typography
  */
 
-* {
+body {
+  font-family: Arial, Helvetica, sans-serif;
   color: #333333;
+  background-color: #fbfbfb;
 }
