--- a/resources/frontend/angular/src/app/core/components/search-page/search-page.component.scss
+++ b/resources/frontend/angular/src/app/core/components/search-page/search-page.component.scss
@@ -1,10 +1,8 @@
+@import "src/styles/general/layout";
 @import "src/styles/general/colors";
 
 :host {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  margin-bottom: auto; // it pulls this element on top
+  @extend .flex-contents;
   padding: 15px;
 
   mat-form-field {
