--- a/resources/frontend/angular/src/styles/general/_layout.scss
+++ b/resources/frontend/angular/src/styles/general/_layout.scss
@@ -18,3 +18,10 @@
     display: block;
   }
 }
+
+.flex-contents {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  margin-bottom: auto; // it pulls this element on top
+}
