--- a/resources/frontend/angular/src/app/app.component.html
+++ b/resources/frontend/angular/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!--<app-header></app-header>-->
 
-<router-outlet></router-outlet>
+<main>
+  <router-outlet #routerOutlet="outlet"></router-outlet>
+</main>
 
 <app-footer></app-footer>
 
