adding keycloak authentication

--- a/resources/frontend/angular/src/app/core/components/your-account/your-account.component.html
+++ b/resources/frontend/angular/src/app/core/components/your-account/your-account.component.html
@@ -1,2 +1,3 @@
 <app-client-account></app-client-account>
 <app-seller-account></app-seller-account>
+<button (click)="keycloak.logout()">Se déconnecter</button>
