make form style for app

--- a/resources/frontend/angular/src/app/core/components/your-account/seller-account/seller-account.component.html
+++ b/resources/frontend/angular/src/app/core/components/your-account/seller-account/seller-account.component.html
@@ -1,6 +1,6 @@
-<form class="seller-form" [formGroup]="sellerForm" novalidate>
+<form class="homy-form seller-form" [formGroup]="sellerForm" novalidate>
 
-  <mat-button-toggle-group #group="matButtonToggleGroup" formControlName="sex">
+  <mat-button-toggle-group class="button-toggle-group" #group="matButtonToggleGroup" formControlName="sex">
     <mat-button-toggle value="'M'">
       <span>Monsieur</span>
     </mat-button-toggle>
