--- a/resources/frontend/angular/src/styles/general/_forms.scss
+++ b/resources/frontend/angular/src/styles/general/_forms.scss
@@ -1,3 +1,37 @@
 /**
- * Global Forms
+ * Homy Forms
  */
+
+.homy-form {
+  .mat-form-field-appearance-fill {
+    .mat-form-field-flex {
+      border: 1px solid orange;
+      border-radius: 15px;
+      background-color: rgba(0, 0, 0, 0.04);
+    }
+    .mat-form-field-underline::before {
+      background-color: orange;
+    }
+  }
+
+  .mat-form-field-underline {
+    width: unset;
+    color: orange;
+    left: 15px;
+    right: 15px;
+    position: absolute;
+    pointer-events: none;
+
+    .mat-form-field-ripple {
+      color: orange;
+    }
+  }
+
+  .button-toggle-group {
+    margin-bottom: 1.34375em;
+    display: flex;
+    & > * {
+      flex: 1;
+    }
+  }
+}
