adds fontawesome, rework styles & subscription form

--- a/resources/frontend/angular/src/app/core/components/posting-categories-select/posting-categories-select.component.html
+++ b/resources/frontend/angular/src/app/core/components/posting-categories-select/posting-categories-select.component.html
@@ -1,4 +1,4 @@
-<mat-form-field color="primary" appearance="fill">
+<mat-form-field color="primary" appearance="outline">
   <mat-label>Type de prestation</mat-label>
   <mat-select [formControl]="prestations" multiple>
     <mat-select-trigger>
