--- a/resources/frontend/angular/src/app/core/components/new-posting-page/new-posting-page.component.html
+++ b/resources/frontend/angular/src/app/core/components/new-posting-page/new-posting-page.component.html
@@ -1,9 +1,9 @@
+<mat-toolbar>Nouvelle annonce</mat-toolbar>
+
 <form class="homy-form" [formGroup]="newPostPage" novalidate>
 
-  <mat-toolbar color="accent">Nouvelle annonce</mat-toolbar>
-
   <!-- Titre -->
-  <mat-form-field color="primary" appearance="fill">
+  <mat-form-field color="primary" appearance="outline">
     <mat-label>Titre de l'annonce</mat-label>
     <input matInput [formControl]="postingTitle">
   </mat-form-field>
