--- a/resources/frontend/angular/src/styles/general/_forms.scss
+++ b/resources/frontend/angular/src/styles/general/_forms.scss
@@ -6,7 +6,7 @@
   .mat-form-field-appearance-fill {
     .mat-form-field-flex {
       border: 1px solid orange;
-      border-radius: 15px;
+      border-radius: 20px;
       background-color: rgba(0, 0, 0, 0.04);
     }
     .mat-form-field-underline::before {
@@ -14,11 +14,17 @@
     }
   }
 
+  .mat-form-field-appearance-outline {
+    .mat-form-field-prefix {
+      top: -4px;
+      margin-right: 8px;
+    }
+  }
   .mat-form-field-underline {
     width: unset;
     color: orange;
-    left: 15px;
-    right: 15px;
+    left: 20px;
+    right: 20px;
     position: absolute;
     pointer-events: none;
 
@@ -33,5 +39,22 @@
     & > * {
       flex: 1;
     }
+  }
+
+  .mat-form-field-outline-start, {
+    border-radius: 20px 0 0 20px !important;
+  }
+  .mat-form-field-outline-end {
+    border-radius: 0 20px 20px 0 !important;
+  }
+
+}
+
+.inline-inputs {
+  display: flex;
+  gap: 2%;
+  & > * {
+    flex: 1;
+    max-width: 49%;
   }
 }
