adds basic authentication to app + login interface (bare)

--- a/resources/frontend/angular/src/app/core/components/your-account/seller-account/seller-account.component.html
+++ b/resources/frontend/angular/src/app/core/components/your-account/seller-account/seller-account.component.html
@@ -67,6 +67,6 @@
 
   <mat-slide-toggle ngDefaultControl formControlName="generalConditions" required>J'accepte les conditions générales</mat-slide-toggle>
 
-  <button mat-flat-button class="fat-button" color="primary">M'inscrire</button>
+  <button mat-raised-button class="fat-button" color="primary">M'inscrire</button>
 
 </form>
