rework login form

--- a/resources/frontend/angular/src/app/core/components/your-account/seller-account/seller-account.component.html
+++ b/resources/frontend/angular/src/app/core/components/your-account/seller-account/seller-account.component.html
@@ -1,4 +1,4 @@
-<form class="homy-form seller-form" [formGroup]="sellerForm" novalidate>
+<form class="homy-form vertical-form" [formGroup]="sellerForm" novalidate>
 
   <mat-button-toggle-group class="button-toggle-group" #group="matButtonToggleGroup" formControlName="sex" required>
     <mat-button-toggle value="'M'">
