--- a/resources/frontend/angular/src/styles/general/_forms.scss
+++ b/resources/frontend/angular/src/styles/general/_forms.scss
@@ -58,3 +58,13 @@
     max-width: 49%;
   }
 }
+
+
+.vertical-form {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  &> * {
+    min-height: 50px;
+  }
+}
