adds routes transitions + cleanup

--- a/resources/frontend/angular/src/app/app.component.html
+++ b/resources/frontend/angular/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--<app-header></app-header>-->
 
-<main>
+<main  [@fadeInOnEnter] [@fadeOutOnLeave] >
   <router-outlet #routerOutlet="outlet"></router-outlet>
 </main>
 
