adds logout button

--- a/resources/frontend/angular/src/app/core/components/your-account/your-account.component.html
+++ b/resources/frontend/angular/src/app/core/components/your-account/your-account.component.html
@@ -1,2 +1,3 @@
 <app-client-account></app-client-account>
+<button (click)="authenticationService.logout()">logout</button>
 <app-seller-account></app-seller-account>
